--- a/authentication/authentication-demo-app/src/main/resources/fxml/idaFXML.fxml
+++ b/authentication/authentication-demo-app/src/main/resources/fxml/idaFXML.fxml
@@ -60,7 +60,8 @@
                                  <children>
                                     <Label text="Authentication Type" />
                                     <CheckBox fx:id="fingerAuthType" mnemonicParsing="false" onAction="#onFingerPrintAuth" text="Finger Print" GridPane.columnIndex="1" />
-                                    <CheckBox fx:id="otpAuthType" mnemonicParsing="false" onAction="#onOTPAuth" text="OTP" GridPane.columnIndex="2" />
+                                    <CheckBox fx:id="irisAuthType" mnemonicParsing="false" onAction="#onIrisAuth" text="Iris" GridPane.columnIndex="2" />
+                                    <CheckBox fx:id="otpAuthType" mnemonicParsing="false" onAction="#onOTPAuth" text="OTP" GridPane.columnIndex="3" />
                                  </children>
                               </GridPane>
                            </children>
@@ -111,12 +112,12 @@
                               <Insets />
                            </GridPane.margin>
                         </AnchorPane>
-                        <AnchorPane fx:id="fingerPrintAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;">
+                        <AnchorPane fx:id="bioAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;">
                            <children>
-                              <Label layoutX="14.0" layoutY="1.0" text="Finger Auth" />
-                              <Button fx:id="captureFinger" layoutX="45.0" layoutY="39.0" mnemonicParsing="false" onAction="#onCaptureFingerPrint" text="Capture FingerPrint" />
-                              <Label ellipsisString="" layoutX="14.0" layoutY="88.0" prefHeight="39.0" prefWidth="131.0" text="Finger Sub Type" />
-                              <ComboBox fx:id="fingerSubType" layoutX="145.0" layoutY="88.0" onAction="#onSubTypeSelection" prefWidth="150.0" />
+                              <Label layoutX="14.0" layoutY="1.0" text="Bio Auth" />
+                              <Button fx:id="capture" layoutX="45.0" layoutY="39.0" mnemonicParsing="false" onAction="#onCapture" text="Capture" />
+                              <Label ellipsisString="" layoutX="14.0" layoutY="88.0" prefHeight="39.0" prefWidth="131.0" text="Count" />
+                              <ComboBox fx:id="count" layoutX="130.0" layoutY="88.0" onAction="#onSubTypeSelection" prefWidth="150.0" />
                            </children>
                         </AnchorPane>
                      </children>
