--- a/authentication/authentication-demo-app/src/main/resources/fxml/idaFXML.fxml
+++ b/authentication/authentication-demo-app/src/main/resources/fxml/idaFXML.fxml
@@ -9,7 +9,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.mosip.authentication.demo.service.IdaController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.mosip.authentication.demo.service.IdaController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -48,7 +48,7 @@
                      <children>
                         <HBox prefHeight="100.0" prefWidth="200.0" spacing="30.0">
                            <children>
-                              <GridPane prefHeight="26.0" prefWidth="486.0">
+                              <GridPane prefHeight="26.0" prefWidth="500.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="35.0" prefWidth="100.0" />
@@ -61,7 +61,8 @@
                                     <Label text="Authentication Type" />
                                     <CheckBox fx:id="fingerAuthType" mnemonicParsing="false" onAction="#onFingerPrintAuth" text="Finger Print" GridPane.columnIndex="1" />
                                     <CheckBox fx:id="irisAuthType" mnemonicParsing="false" onAction="#onIrisAuth" text="Iris" GridPane.columnIndex="2" />
-                                    <CheckBox fx:id="otpAuthType" mnemonicParsing="false" onAction="#onOTPAuth" text="OTP" GridPane.columnIndex="3" />
+                                    <CheckBox fx:id="faceAuthType" mnemonicParsing="false" onAction="#onFaceAuth" text="Face" GridPane.columnIndex="3" />
+                                    <CheckBox fx:id="otpAuthType" mnemonicParsing="false" onAction="#onOTPAuth" text="OTP" GridPane.columnIndex="4" />
                                  </children>
                               </GridPane>
                            </children>
@@ -131,7 +132,7 @@
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                      <children>
                         <Label layoutX="18.0" layoutY="1.0" text="Response" />
-                        <TextField fx:id="responsetextField" layoutX="56.0" layoutY="27.0" prefHeight="39.0" prefWidth="425.0" />
+                        <TextField fx:id="responsetextField" layoutX="56.0" layoutY="27.0" prefHeight="39.0" prefWidth="500.0" />
                      </children>
                   </AnchorPane>
                </children>
