--- a/authentication/authentication-demo-app/src/main/resources/fxml/idaFXML.fxml
+++ b/authentication/authentication-demo-app/src/main/resources/fxml/idaFXML.fxml
@@ -9,7 +9,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.mosip.authentication.demo.service.IdaController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.mosip.authentication.demo.service.IdaController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -28,12 +28,12 @@
           <RowConstraints minHeight="10.0" percentHeight="90.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <AnchorPane prefHeight="50.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Label layoutX="207.0" layoutY="1.0" text="IDA Demo Application" />
+                  <Label layoutX="230.0" layoutY="15.0" text="ID-Authentication Demo Application" />
                </children>
             </AnchorPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1" vgap="10.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -44,11 +44,11 @@
                   <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="2.0">
+                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                      <children>
-                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="50.0">
                            <children>
-                              <GridPane prefHeight="26.0" prefWidth="500.0">
+                              <GridPane prefHeight="40.0" prefWidth="500.0">
                                 <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="30.0" prefWidth="100.0" />
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
@@ -56,10 +56,10 @@
 	                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="30.0" prefHeight="40.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <Label text="Authentication Type" />
+                                    <Label text="Authentication Type:" />
                                     <CheckBox fx:id="fingerAuthType" mnemonicParsing="false" onAction="#onFingerPrintAuth" text="Finger Print" GridPane.columnIndex="1" />
                                     <CheckBox fx:id="irisAuthType" mnemonicParsing="false" onAction="#onIrisAuth" text="Iris" GridPane.columnIndex="2" />
                                     <CheckBox fx:id="faceAuthType" mnemonicParsing="false" onAction="#onFaceAuth" text="Face" GridPane.columnIndex="3" />
@@ -68,27 +68,16 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="80.0">
                            <children>
-                              <Label text="IndividualId" />
-                              <TextField fx:id="idValue" />
+                              <Label text="Individual-ID:" />
+                              <TextField fx:id="idValue" prefWidth="200.0" />
                            </children>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="60.0">
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="50.0">
                            <children>
-                              <GridPane prefHeight="33.0" prefWidth="547.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="60.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <Label text="IndividualIdType" />
-                                    <ComboBox fx:id="idTypebox" onAction="#onIdTypeChange" prefHeight="30.0" prefWidth="204.0" GridPane.columnIndex="1" />
-                                 </children>
-                              </GridPane>
+                                    <Label text="Individual-ID-Type:" />
+                                    <ComboBox fx:id="idTypebox" onAction="#onIdTypeChange" prefWidth="200.0" GridPane.columnIndex="1" />
                            </children>
                         </HBox>
                      </children>
@@ -103,37 +92,39 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
+                        <AnchorPane fx:id="bioAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;">
+                           <children>
+                              <Label layoutX="5.0" layoutY="1.0" text="Biometric Authentication" />
+                           	  <Label ellipsisString="" layoutX="14.0" layoutY="15.0" prefHeight="37.0" prefWidth="131.0" text="Fingers Count:" />
+                              <ComboBox fx:id="fingerCount" layoutX="110.0" layoutY="24.0" onAction="#onSubTypeSelection" prefWidth="150.0" />
+                               <Label ellipsisString="" layoutX="14.0" layoutY="55.0" prefHeight="37.0" prefWidth="131.0" text="Iris Type:" />
+                              <ComboBox fx:id="irisCount" layoutX="110.0" layoutY="65.0" onAction="#onSubTypeSelection" prefWidth="150.0" />
+                              <Button fx:id="capture" layoutX="110.0" layoutY="110.0" prefWidth="131.0" mnemonicParsing="false" onAction="#onCapture" text="Capture" />
+                           </children>
+                        </AnchorPane>
                         <AnchorPane fx:id="otpAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;" GridPane.columnIndex="2">
                            <children>
-                              <Label layoutX="14.0" layoutY="1.0" text="OTP Auth" />
-                              <Button fx:id="requestOtp" layoutX="45.0" layoutY="33.0" mnemonicParsing="false" onAction="#onRequestOtp" text="Request OTP" />
-                              <Label layoutX="28.0" layoutY="94.0" text="OTP" />
-                              <TextField fx:id="otpValue" layoutX="91.0" layoutY="88.0" prefHeight="39.0" prefWidth="120.0" />
+                              <Label layoutX="5.0" layoutY="1.0" text="OTP Authentication" />
+                              <Button fx:id="requestOtp" layoutX="14.0" layoutY="24.0" prefWidth="200.0" mnemonicParsing="false" onAction="#onRequestOtp" text="Request OTP" />
+                              <Label layoutX="14.0" layoutY="70.0" text="Enter OTP:" />
+                              <TextField fx:id="otpValue" layoutX="91.0" layoutY="70.0" prefWidth="120.0"/>
                            </children>
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
                         </AnchorPane>
-                        <AnchorPane fx:id="bioAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;">
-                           <children>
-                              <Label layoutX="14.0" layoutY="1.0" text="Bio Auth" />
-                              <Button fx:id="capture" layoutX="45.0" layoutY="39.0" mnemonicParsing="false" onAction="#onCapture" text="Capture" />
-                              <Label ellipsisString="" layoutX="14.0" layoutY="88.0" prefHeight="39.0" prefWidth="131.0" text="Count" />
-                              <ComboBox fx:id="count" layoutX="130.0" layoutY="88.0" onAction="#onSubTypeSelection" prefWidth="150.0" />
-                           </children>
-                        </AnchorPane>
                      </children>
                   </GridPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                      <children>
-                        <Button fx:id="sendAuthRequest" layoutX="54.0" layoutY="9.0" mnemonicParsing="false" onAction="#onSendAuthRequest" text="Send Auth Request" />
-                        <Button fx:id="reset" layoutX="385.0" layoutY="5.0" mnemonicParsing="false" onAction="#onReset" text="Reset" />
+                        <Button fx:id="sendAuthRequest" layoutX="0.0" layoutY="0.0" mnemonicParsing="false" onAction="#onSendAuthRequest" text="Send Auth Request" />
+                        <Button fx:id="reset" layoutX="585.0" layoutY="0.0" mnemonicParsing="false" onAction="#onReset" text="Reset" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                      <children>
-                        <Label layoutX="18.0" layoutY="1.0" text="Response" />
-                        <TextField fx:id="responsetextField" layoutX="56.0" layoutY="27.0" prefHeight="39.0" prefWidth="500.0" />
+                        <Label layoutX="0.0" layoutY="0.0" text="Response:" />
+                        <TextField fx:id="responsetextField" layoutX="0.0" layoutY="20.0" prefHeight="39.0" prefWidth="630.0" />
                      </children>
                   </AnchorPane>
                </children>
