--- a/registration/registration-client/src/main/resources/fxml/GuardianBiometrics.fxml
+++ b/registration/registration-client/src/main/resources/fxml/GuardianBiometrics.fxml
@@ -110,6 +110,7 @@
                                           <GridPane fx:id="ContentHeader">
                                              <children>
                                                 <Label alignment="CENTER" contentDisplay="CENTER" styleClass="paneHeader" text="%guardianBiometric" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
+                                                <Label fx:id="dedupeMessage" alignment="CENTER" contentDisplay="CENTER" styleClass="paneHeader" text="%dedupeMessage" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER" visible="false" />
                                                 <ComboBox fx:id="biometricTypecombo" onAction="#displayBiometric" prefWidth="150.0" promptText="%select" styleClass="demographicCombobox" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                                              </children>
                                              <columnConstraints>
